Made game window square based on shortest dimension of window size. This prevents asteroids from spending too much time off to the sides on a widescreen proportional to the shorter height, and vice versa for taller to narrower mobile views. Also, added background image to body to cover the plain white sides surrounding game window.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,18 @@
 body
 {
+	background-image: url('../assets/images/background.jpg');
+	background-repeat: no-repeat;
+	background-size: 99% 99%;
+	display: block;
 	font-family: Arial;
-	margin: auto auto;
-	position: relative;
-	width: 100%;
 }
 #mainview
 {
 	display: block;
 	position: absolute;
-	height: 100%;
 	left: 0px;
-	margin: auto auto;
 	top: 0px;
-	width: 100%;
+	z-index: 2;
 }
 #scoreboard
 {
